--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -15,7 +15,7 @@
     <% if current_user.likes?(post) %>
       <%= link_to post_dislike_path(post), method: :post, class: 'unlike-button unlike-button-color' do %>
         <i class="fa fa-thumbs-down icon"></i>
-        <span>Unlike</span>
+        <span>Unlike<%=display_likes(post)%></span>
       <% end %>
 		<% else %>
     <%= link_to post_likes_path(post), method: :post, class: 'like-button button-color' do %>
@@ -25,7 +25,7 @@
 		<% end %>
 	  <%= link_to post_path(post), method: :get, class: 'comment-button button-color' do %>
       <i class="fa fa-comment icon"></i>
-      <span>Comment</span>
+      <span>Comment<%=display_comments(post)%></span>
     <% end %>
 	</div>
 </div>
